add banner API
